# neug

./: .gitmodules  CMakeLists.txt  README.md  neug-config.in.cmake
.github/: codecov.yml
.github/workflows/: build-extensions.yml  docs.yml  format-check.yml  neug-extension-test.yml  neug-test.yml  wheels-common.yml
cmake/: BuildArrowAsThirdParty.cmake  BuildBRPCAsThirdParty.cmake  BuildGflagsAsThirdParty.cmake  BuildGlogAsThirdParty.cmake  BuildLLVMAsThirdParty.cmake
doc/source/_scripts/: generate_python_docs.py
doc/source/cypher_manual/: data_types.md
doc/source/data_io/: export_data.md
doc/source/extensions/: load_json.md
doc/source/overview/: introduction.md
doc/source/reference/: _meta.ts
doc/source/reference/cpp_api/: connection.md  index.md  neug_db.md
doc/source/reference/java_api/: index.md
doc/source/reference/python_api/: connection.md  database.md  query_result.md  session.md
example_dataset/comprehensive_graph/: node_a_export.csv  path_a_export.csv  rel_a_export.csv
extension/json/include/: json_read_function.h
extension/json/src/: json_dataset_builder.cc  json_export_function.cc  json_extension.cpp
include/neug/: config.h.in
include/neug/compiler/binder/: binder.h
include/neug/compiler/binder/copy/: bound_copy_to.h
include/neug/compiler/common/types/: types.h
include/neug/compiler/extension/: extension.h
include/neug/compiler/function/: neug_scalar_function.h  read_function.h
include/neug/compiler/function/export/: export_function.h
include/neug/compiler/gopt/: g_constants.h  g_query_converter.h  g_type_utils.h
include/neug/compiler/planner/: planner.h
include/neug/compiler/planner/operator/persistent/: logical_copy_to.h
include/neug/compiler/tools/shell/include/: keywords.h
include/neug/execution/common/: context.h
include/neug/execution/common/columns/: arrow_context_column.h  columns_utils.h  const_column.h  edge_columns.h  i_context_column.h  list_columns.h  path_columns.h  struct_columns.h  value_columns.h  vertex_columns.h
include/neug/execution/common/types/: value.h
include/neug/execution/execute/ops/batch/: data_source.h
include/neug/execution/expression/: expr.h  predicates.h
include/neug/execution/expression/accessors/: const_accessor.h
include/neug/execution/expression/codegen/: codegen_types.h  expr_codegen.h  jit_compiled_expr.h  jit_engine.h
include/neug/execution/expression/exprs/: arith_expr.h  case_when.h  extract_expr.h  logical_expr.h  udfs.h
include/neug/execution/expression/operations/: arithmetic.h  column_cast.h  comparsion.h  expr_executors.h  logical.h
include/neug/execution/extension/: extension.h
include/neug/main/: file_lock.h
include/neug/storages/column/: I_container.h
include/neug/storages/csr/: immutable_csr.h  mutable_csr.h
include/neug/storages/graph/: edge_table.h  operation_params.h  property_graph.h  vertex_table.h
include/neug/utils/: file_utils.h  function_type.h  id_indexer.h  mmap_array.h  spinlock.h
include/neug/utils/property/: column.h  table.h
include/neug/utils/writer/: writer.h
proto/: cypher_dml.proto  response.proto
scripts/: rename_wheels.sh
src/: CMakeLists.txt  README.md
src/compiler/antlr4/: Cypher.g4
src/compiler/binder/bind/: bind_extension.cpp
src/compiler/binder/bind/copy/: bind_copy_to.cpp
src/compiler/common/types/: types.cpp
src/compiler/extension/: extension.cpp
src/compiler/function/: CMakeLists.txt  csv_export_function.cpp  function_collection.cpp  vector_cast_functions.cpp
src/compiler/function/list/: list_extract_function.cpp
src/compiler/gopt/: g_expr_converter.cpp  g_query_converter.cpp  g_type_converter.cpp
src/compiler/planner/: gopt_planner.cc  planner.cpp
src/compiler/planner/plan/: CMakeLists.txt
src/compiler/scripts/antlr4/: generate_grammar.cmake
src/execution/: CMakeLists.txt
src/execution/codegen/: expr_codegen.cc  jit_compiled_expr.cc  jit_engine.cc
src/execution/common/: context.cc
src/execution/common/columns/: const_column.cc  list_columns.cc  struct_columns.cc  vertex_columns.cc
src/execution/common/operators/retrieve/: dedup.cc  edge_expand.cc  intersect.cc  join.cc  limit.cc  path_expand.cc  path_expand_impl.cc  unfold.cc
src/execution/common/types/: value.cc
src/execution/execute/ops/batch/: batch_delete_edge.cc  batch_delete_vertex.cc  data_export.cc
src/execution/execute/ops/ddl/: create_vertex_type.cc
src/execution/execute/ops/retrieve/: dedup.cc  edge.cc  group_by_utils.cc  order_by.cc  order_by_utils.cc  project_utils.cc  scan.cc  select.cc  vertex.cc
src/execution/expression/: expr.cc
src/execution/expression/accessors/: const_accessor.cc  edge_accessor.cc  record_accessor.cc  vertex_accessor.cc
src/execution/expression/exprs/: arith_expr.cc  case_when.cc  extract_expr.cc  logical_expr.cc  path_expr.cc  struct_expr.cc  udfs.cc
src/execution/extension/: extension.cc
src/main/: connection.cc  file_lock.cc  neug_db.cc  query_processor.cc
src/storages/container/: file_mmap_container.cc  mmap_container.cc
src/storages/csr/: immutable_csr.cc  mutable_csr.cc
src/storages/graph/: edge_table.cc  graph_interface.cc  property_graph.cc  schema.cc  vertex_table.cc
src/transaction/: update_transaction.cc
src/utils/: CMakeLists.txt  pb_utils.cc
src/utils/property/: column.cc  table.cc  types.cc
src/utils/writer/: writer.cc
tests/compiler/: extension_test.cpp  gopt_test.h
tests/execution/: test_runtime_column.cc
tests/storage/: test_edge_table.cc  test_memory_level.cc  test_vertex_table.cc
tests/unittest/: test_connection.cc  test_extension.cc  test_indexer.cc
tools/java_driver/: USAGE.md  pom.xml
tools/python_bind/: pyproject.toml  setup.py
tools/python_bind/example/: complex_test.py
tools/python_bind/neug/: database.py
tools/python_bind/src/: neug_binding.cc  py_database.cc  py_database.h
tools/python_bind/tests/: test_data_io_docs.py  test_db_init.py  test_db_query.py  test_db_transaction.py  test_ddl.py  test_export.py  test_load.py  test_ngcli_commands.py  test_tp_service.py
tools/utils/: CMakeLists.txt  bulk_loader.cc
(+24 files in other folders)
